Fix cli using jdk11